[package]
name = "bluespec_translator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
log = "0.4.27"
surfer-translation-types = { path = "../surfer/surfer-translation-types", features = [
    "wasm_plugins",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18" # Or the latest stable version you prefer
